base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-wdpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-wdpress
  template:
    metadata:
      labels:
        app: web-wdpress
    spec:
      containers:
      - image: registry.redhat.io/rhel9/httpd-24 
        name: httpd
        ports:
        - containerPort: 8080
