base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-web-wdpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
