base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: route-web-wdpress
spec:
  to:
    kind: Service
    name: edge-svc-web-wdpress
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: http
